hide cnzz & fix ie11 collapse

--- a/zego/css/main.css
+++ b/zego/css/main.css
@@ -64,7 +64,7 @@ textarea {
 
 
 body {
-    font-family: "Helvetica Neue", Helvetica, Arial, "Microsoft Yahei", "Hiragino Sans GB", "Heiti SC", "WenQuanYi Micro Hei", sans-serif;
+    font-family: Helvetica, Arial, "Microsoft Yahei", "Hiragino Sans GB", "Heiti SC", "WenQuanYi Micro Hei", sans-serif;
     font-weight: 300;
     font-size: 16px;
     color: #555;
